Add is_paused to decks
