# docs/openapi.yaml
@@ -340,6 +340,13 @@ paths:
           type: boolean
           default: false
           title: Only Due
+      - name: exclude_paused
+        in: query
+        required: false
+        schema:
+          type: boolean
+          default: false
+          title: Exclude Paused
       - name: exclude_archived
         in: query
         required: false
@@ -1140,6 +1147,9 @@ components:
         description:
           type: string
           title: Description
+        is_paused:
+          type: boolean
+          title: Is Paused
         is_archived:
           type: boolean
           title: Is Archived
@@ -1157,6 +1167,7 @@ components:
       - user_id
       - name
       - description
+      - is_paused
       - is_archived
       - created_at
       - updated_at
@@ -1225,6 +1236,11 @@ components:
             format: uuid
           - type: 'null'
           title: Category Id
+        is_paused:
+          anyOf:
+          - type: boolean
+          - type: 'null'
+          title: Is Paused
         is_archived:
           anyOf:
           - type: boolean
